--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,30 +4,31 @@
     "type": "split",
     "children": [
       {
-        "id": "bc943b80452ac671",
-        "type": "leaf",
-        "dimension": 48.26021180030257,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "date/2022-01-30.md",
-            "mode": "source",
-            "source": true
+        "id": "36b33dbc6fa54fb8",
+        "type": "split",
+        "children": [
+          {
+            "id": "bc943b80452ac671",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "IT/js模块化.md",
+                "mode": "source",
+                "source": true
+              }
+            }
+          },
+          {
+            "id": "f81e17217b58533c",
+            "type": "leaf",
+            "state": {
+              "type": "mindmap",
+              "state": {}
+            }
           }
-        }
-      },
-      {
-        "id": "c87e64067ccb07fc",
-        "type": "leaf",
-        "dimension": 51.73978819969742,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "IT/js模块化.md",
-            "mode": "source",
-            "source": true
-          }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -75,7 +76,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 301
+    "width": 168
   },
   "right": {
     "id": "94c2705e271ccd94",
@@ -92,7 +93,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-01-30.md"
+                "file": "IT/js模块化.md"
               }
             }
           },
@@ -144,7 +145,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-01-30.md",
+                "file": "IT/js模块化.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -161,7 +162,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-01-30.md",
+                "file": "IT/js模块化.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -176,15 +177,15 @@
   },
   "active": "bc943b80452ac671",
   "lastOpenFiles": [
-    "date/2022-01-30.md",
     "IT/js模块化.md",
     "date/2022-01-29.md",
+    "date/2022-01-30.md",
+    "date/2022-01-31.md",
     "进度/程序员山月博客.md",
     "date/2022-01-28.md",
     "date/2022-01-27.md",
     "date/2022-01-26.md",
     "date/2022-01-12.md",
-    "date/2022-01-13.md",
-    "date/2022-01-14.md"
+    "date/2022-01-13.md"
   ]
 }
