--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,31 +4,16 @@
     "type": "split",
     "children": [
       {
-        "id": "36b33dbc6fa54fb8",
-        "type": "split",
-        "children": [
-          {
-            "id": "bc943b80452ac671",
-            "type": "leaf",
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "IT/js模块化.md",
-                "mode": "source",
-                "source": true
-              }
-            }
-          },
-          {
-            "id": "f81e17217b58533c",
-            "type": "leaf",
-            "state": {
-              "type": "mindmap",
-              "state": {}
-            }
+        "id": "bc943b80452ac671",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "js模块化.md",
+            "mode": "source",
+            "source": true
           }
-        ],
-        "direction": "horizontal"
+        }
       }
     ],
     "direction": "vertical"
@@ -55,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#想了解",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -76,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 168
+    "width": 268
   },
   "right": {
     "id": "94c2705e271ccd94",
@@ -93,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "IT/js模块化.md"
+                "file": "js模块化.md"
               }
             }
           },
@@ -132,7 +117,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 3
       },
       {
         "id": "4aade1f8172d14e7",
@@ -145,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "IT/js模块化.md",
+                "file": "js模块化.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -162,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "IT/js模块化.md",
+                "file": "js模块化.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -172,20 +158,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 196,
-    "collapsed": true
+    "width": 100
   },
   "active": "bc943b80452ac671",
   "lastOpenFiles": [
-    "IT/js模块化.md",
+    "js模块化.md",
+    "进度/程序员山月博客.md",
+    "date/2022-02-07.md",
+    "收集箱/不错的专栏.md",
+    "收集箱/B站up主.md",
+    "temp/日记模板.md",
     "date/2022-01-29.md",
     "date/2022-01-30.md",
     "date/2022-01-31.md",
-    "进度/程序员山月博客.md",
-    "date/2022-01-28.md",
-    "date/2022-01-27.md",
-    "date/2022-01-26.md",
-    "date/2022-01-12.md",
-    "date/2022-01-13.md"
+    "date/2022-02-01.md"
   ]
 }
