--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "bc943b80452ac671",
+        "id": "09d505e907798157",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "js模块化.md",
+            "file": "date/2022-02-11.md",
             "mode": "source",
-            "source": true
+            "source": false
           }
         }
       }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "黄玄",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "js模块化.md"
+                "file": "date/2022-02-11.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "js模块化.md",
+                "file": "date/2022-02-11.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "js模块化.md",
+                "file": "date/2022-02-11.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -158,19 +158,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 100
+    "width": 276
   },
-  "active": "bc943b80452ac671",
+  "active": "09d505e907798157",
   "lastOpenFiles": [
-    "js模块化.md",
-    "进度/程序员山月博客.md",
+    "date/2022-02-11.md",
+    "date/2022-02-13.md",
+    "文章/js模块化系列1.md",
+    "file/Pasted image 20220212163735.png",
+    "file/Pasted image 20220212154454.png",
+    "file/Pasted image 20220212162653.png",
+    "file/淘宝首页对比.png",
+    "未命名.md",
     "date/2022-02-07.md",
-    "收集箱/不错的专栏.md",
-    "收集箱/B站up主.md",
-    "temp/日记模板.md",
-    "date/2022-01-29.md",
-    "date/2022-01-30.md",
-    "date/2022-01-31.md",
-    "date/2022-02-01.md"
+    "IT/前端科普系列（3）：CommonJS 不是前端却革命了前端.md"
   ]
 }
