--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "09d505e907798157",
+        "id": "39646d808bff05d1",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-02-11.md",
+            "file": "date/2022-03-03.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "黄玄",
+                "query": "github",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -61,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 268
+    "width": 108
   },
   "right": {
     "id": "94c2705e271ccd94",
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-02-11.md"
+                "file": "date/2022-03-03.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-02-11.md",
+                "file": "date/2022-03-03.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-02-11.md",
+                "file": "date/2022-03-03.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -158,19 +158,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 276
+    "width": 276,
+    "collapsed": true
   },
-  "active": "09d505e907798157",
+  "active": "39646d808bff05d1",
   "lastOpenFiles": [
-    "date/2022-02-11.md",
-    "date/2022-02-13.md",
-    "文章/js模块化系列1.md",
-    "file/Pasted image 20220212163735.png",
-    "file/Pasted image 20220212154454.png",
-    "file/Pasted image 20220212162653.png",
-    "file/淘宝首页对比.png",
-    "未命名.md",
-    "date/2022-02-07.md",
-    "IT/前端科普系列（3）：CommonJS 不是前端却革命了前端.md"
+    "date/2022-03-03.md",
+    "知识/easyv的调研文档.md",
+    "工作台/datart-issues.md",
+    "date/2022-02-28.md",
+    "date/2022-02-27.md",
+    "date/2022-02-26.md",
+    "date/2022-02-25.md",
+    "date/2022-02-24.md",
+    "date/2022-02-21.md",
+    "date/2022-02-22.md"
   ]
 }
