--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "IT/拉取pr.md",
-            "mode": "preview",
+            "mode": "source",
             "source": true
           }
         }
@@ -117,7 +117,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 3
       },
       {
         "id": "4aade1f8172d14e7",
@@ -162,14 +163,14 @@
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
     "IT/拉取pr.md",
+    "IT/Git.md",
+    "date/2022-03-06.md",
+    "IT/video标签.md",
+    "进度/学习记录.md",
+    "IT/babel.md",
+    "date/2022-03-03.md",
     "date/2022-03-04.md",
     "temp/日记模板.md",
-    "工作台/datart-issues.md",
-    "IT/Git.md",
-    "date/2022-03-03.md",
-    "知识/easyv的调研文档.md",
-    "date/2022-02-28.md",
-    "date/2022-02-27.md",
-    "date/2022-02-26.md"
+    "工作台/datart-issues.md"
   ]
 }
