--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "IT/拉取pr.md",
+            "file": "date/2022-03-08.md",
             "mode": "source",
             "source": true
           }
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "IT/拉取pr.md"
+                "file": "date/2022-03-08.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "IT/拉取pr.md",
+                "file": "date/2022-03-08.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "IT/拉取pr.md",
+                "file": "date/2022-03-08.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -162,6 +162,8 @@
   },
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
+    "date/2022-03-08.md",
+    "date/2022-03-07.md",
     "IT/拉取pr.md",
     "IT/Git.md",
     "date/2022-03-06.md",
@@ -169,8 +171,6 @@
     "进度/学习记录.md",
     "IT/babel.md",
     "date/2022-03-03.md",
-    "date/2022-03-04.md",
-    "temp/日记模板.md",
-    "工作台/datart-issues.md"
+    "date/2022-03-04.md"
   ]
 }
