--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-03-08.md",
+            "file": "date/2022-03-10.md",
             "mode": "source",
             "source": true
           }
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-03-08.md"
+                "file": "date/2022-03-10.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-03-08.md",
+                "file": "date/2022-03-10.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-03-08.md",
+                "file": "date/2022-03-10.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -162,6 +162,8 @@
   },
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
+    "date/2022-03-10.md",
+    "date/2022-03-08.md",
     "date/2022-03-01.md",
     "date/2022-03-02.md",
     "date/2022-03-03.md",
@@ -169,8 +171,6 @@
     "date/2022-03-05.md",
     "date/2022-03-06.md",
     "date/2022-03-07.md",
-    "IT/国际化方案.md",
-    "date/2022-03-08.md",
-    "date/2022-02-07.md"
+    "IT/国际化方案.md"
   ]
 }
