--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-03-10.md",
-            "mode": "source",
+            "file": "IT/TS/as counst.md",
+            "mode": "preview",
             "source": true
           }
         }
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-03-10.md"
+                "file": "IT/TS/as counst.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-03-10.md",
+                "file": "IT/TS/as counst.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-03-10.md",
+                "file": "IT/TS/as counst.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -162,15 +162,15 @@
   },
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
+    "IT/TS/as counst.md",
+    "date/2022-03-13.md",
+    "IT/TS/ts笔记.md",
+    "IT/TS/ts命名空间.md",
+    "date/2022-03-09.md",
+    "date/2022-03-11.md",
     "date/2022-03-10.md",
     "date/2022-03-08.md",
     "date/2022-03-01.md",
-    "date/2022-03-02.md",
-    "date/2022-03-03.md",
-    "date/2022-03-04.md",
-    "date/2022-03-05.md",
-    "date/2022-03-06.md",
-    "date/2022-03-07.md",
-    "IT/国际化方案.md"
+    "date/2022-03-02.md"
   ]
 }
