--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-04-04.md",
+            "file": "关注的B站Up.md",
             "mode": "source",
             "source": true
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "line:(一个托尼)",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -79,7 +79,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-04-04.md"
+                "file": "关注的B站Up.md"
               }
             }
           },
@@ -131,7 +131,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-04-04.md",
+                "file": "关注的B站Up.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +148,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-04-04.md",
+                "file": "关注的B站Up.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -158,19 +158,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 199
+    "width": 199,
+    "collapsed": true
   },
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
-    "date/2022-04-04.md",
+    "关注的B站Up.md",
+    "README.md",
+    "收集箱/B站up主.md",
     "mac开发环境.md",
+    "date/2022-04-04.md",
     "date/2022-04-03.md",
     "工具/mac 小技巧.md",
     "date/2022-02-09.md",
     "V8垃圾回收js.md",
-    "IT/historyApiFallback.md",
-    "date/2022-04-01.md",
-    "date/2022-03-30.md",
-    "date/2022-03-27.md"
+    "IT/historyApiFallback.md"
   ]
 }
