--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "关注的B站Up.md",
+            "file": "IT/TS/ts笔记.md",
             "mode": "source",
             "source": true
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "line:(一个托尼)",
+                "query": "ts ",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -57,8 +57,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -79,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "关注的B站Up.md"
+                "file": "IT/TS/ts笔记.md"
               }
             }
           },
@@ -131,7 +130,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "关注的B站Up.md",
+                "file": "IT/TS/ts笔记.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -148,7 +147,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "关注的B站Up.md",
+                "file": "IT/TS/ts笔记.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -163,15 +162,15 @@
   },
   "active": "39646d808bff05d1",
   "lastOpenFiles": [
+    "IT/TS/ts笔记.md",
+    "IT/TS/ts命名空间.md",
+    "date/2022-01-21.md",
+    "date/2022-04-07.md",
     "关注的B站Up.md",
     "README.md",
     "收集箱/B站up主.md",
     "mac开发环境.md",
     "date/2022-04-04.md",
-    "date/2022-04-03.md",
-    "工具/mac 小技巧.md",
-    "date/2022-02-09.md",
-    "V8垃圾回收js.md",
-    "IT/historyApiFallback.md"
+    "date/2022-04-03.md"
   ]
 }
