--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "39646d808bff05d1",
+        "id": "07db71a4c503335a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-06-27.md",
+            "file": "面试/自我介绍.md",
             "mode": "source",
-            "source": false
+            "source": true
           }
         }
       }
@@ -61,8 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 261,
-    "collapsed": true
+    "width": 261
   },
   "right": {
     "id": "94c2705e271ccd94",
@@ -79,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-06-27.md"
+                "file": "面试/自我介绍.md"
               }
             }
           },
@@ -125,6 +124,14 @@
               "type": "calendar",
               "state": {}
             }
+          },
+          {
+            "id": "a5baf5ed9cd8669c",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
         ],
         "currentTab": 5
@@ -140,13 +147,13 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-06-27.md",
+                "file": "面试/自我介绍.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": true,
                 "searchQuery": "",
-                "backlinkCollapsed": true,
+                "backlinkCollapsed": false,
                 "unlinkedCollapsed": false
               }
             }
@@ -157,7 +164,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-06-27.md",
+                "file": "面试/自我介绍.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -167,19 +174,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 431
+    "width": 287
   },
-  "active": "39646d808bff05d1",
+  "active": "07db71a4c503335a",
   "lastOpenFiles": [
-    "date/2022-06-27.md",
-    "date/2022-07-12.md",
-    "viz设计.md",
-    "date/2022-05-13.md",
-    "IT/TS/ts笔记.md",
-    "IT/TS/ts命名空间.md",
-    "date/2022-01-21.md",
-    "date/2022-04-07.md",
-    "关注的B站Up.md",
-    "README.md"
+    "面试/自我介绍.md",
+    "面试/面试记录.md",
+    "华为外包.md",
+    "人大金仓.md",
+    "联通数科.md",
+    "智慧足迹.md",
+    "至臻云.md",
+    "shopee.md",
+    "金锐同创.md",
+    "Bano.md"
   ]
 }
