--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -179,15 +179,15 @@
   },
   "active": "80aed52a44d2a0b7",
   "lastOpenFiles": [
-    "date/2022-07-25.md",
-    "面试/面试记录.md",
     "面试/八股面试.md",
+    "date/2022-07-27.md",
+    "面试/面试记录.md",
+    "面试/自我介绍.md",
+    "date/2022-07-26.md",
+    "date/2022-07-25.md",
     "date/2022-07-24.md",
     "smartX.md",
     "jump/super-jump/practice?questionId=23286.md",
-    "date/2022-07-23.md",
-    "天翼云.md",
-    "面试/自我介绍.md",
-    "百度智能云 react.md"
+    "date/2022-07-23.md"
   ]
 }
