--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "面试/面试记录.md",
+            "file": "date/2022-07-29.md",
             "mode": "source",
             "source": false
           }
@@ -78,7 +78,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "面试/面试记录.md"
+                "file": "date/2022-07-29.md"
               }
             }
           },
@@ -147,7 +147,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "面试/面试记录.md",
+                "file": "date/2022-07-29.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -164,7 +164,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "面试/面试记录.md",
+                "file": "date/2022-07-29.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -179,9 +179,9 @@
   },
   "active": "80aed52a44d2a0b7",
   "lastOpenFiles": [
+    "面试/面试记录.md",
     "面试/八股面试.md",
     "date/2022-07-27.md",
-    "面试/面试记录.md",
     "面试/自我介绍.md",
     "date/2022-07-26.md",
     "date/2022-07-25.md",
