--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -193,15 +193,15 @@
   },
   "active": "80aed52a44d2a0b7",
   "lastOpenFiles": [
-    "date/2022-08-02.md",
+    "date/2022-08-03.md",
     "面试/面试记录.md",
+    "date/2022-08-02.md",
     "date/2022-08-01.md",
     "date/2022-07-31.md",
     "date/2022-07-29.md",
     "smartX.md",
     "面试/八股面试.md",
     "date/2022-07-27.md",
-    "面试/自我介绍.md",
-    "date/2022-07-26.md"
+    "面试/自我介绍.md"
   ]
 }
