--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "80aed52a44d2a0b7",
         "type": "leaf",
-        "dimension": 78.32422586520947,
+        "dimension": 83.22147651006712,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "date/2022-08-05.md",
+            "file": "date/2022-08-11.md",
             "mode": "source",
             "source": false
           }
@@ -19,7 +19,7 @@
       {
         "id": "5d0e9e3d6ae5e994",
         "type": "leaf",
-        "dimension": 21.67577413479053,
+        "dimension": 16.778523489932887,
         "state": {
           "type": "markdown",
           "state": {
@@ -75,7 +75,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 172
+    "width": 199
   },
   "right": {
     "id": "94c2705e271ccd94",
@@ -92,7 +92,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "date/2022-08-05.md"
+                "file": "date/2022-08-11.md"
               }
             }
           },
@@ -161,7 +161,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "date/2022-08-05.md",
+                "file": "date/2022-08-11.md",
                 "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -178,7 +178,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "date/2022-08-05.md",
+                "file": "date/2022-08-11.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -193,15 +193,15 @@
   },
   "active": "80aed52a44d2a0b7",
   "lastOpenFiles": [
-    "面试/八股面试.md",
-    "date/2022-08-05.md",
     "面试/面试记录.md",
-    "date/2022-08-04.md",
-    "date/2022-08-03.md",
-    "date/2022-08-02.md",
-    "date/2022-08-01.md",
-    "date/2022-07-31.md",
-    "date/2022-07-29.md",
-    "smartX.md"
+    "date/2022-08-10.md",
+    "面试/主观面试.md",
+    "面试/面试题.md",
+    "date/2022-08-09.md",
+    "date/2022-08-08.md",
+    "date/2022-08-06.md",
+    "date/2022-08-05.md",
+    "面试/八股面试.md",
+    "date/2022-08-04.md"
   ]
 }
